Updated the extentreport.xml file according to marina

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,47 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">10</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">436,182</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">test</a></td><td class="num">10</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">431,744</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.marina.tests.Mod_6_BoatGroup</td><td><a href="#m0">generatingMultipleAddRequest_TC_1009</a></td><td rowspan="1">1699268297019</td><td rowspan="1">24306</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="10">com.marina.tests.Mod_6_BoatGroup</td><td><a href="#m1">addBoatGroupAllFields_TC_1003</a></td><td rowspan="1">1699268081002</td><td rowspan="1">5086</td></tr><tr class="passedeven"><td><a href="#m2">addBoatGroupMandatoryFields_TC_1002</a></td><td rowspan="1">1699268051362</td><td rowspan="1">4343</td></tr><tr class="passedeven"><td><a href="#m3">addBoatMainPage_TC_1007</a></td><td rowspan="1">1699268207762</td><td rowspan="1">5828</td></tr><tr class="passedeven"><td><a href="#m4">deleteBoatGroups_TC_1011</a></td><td rowspan="1">1699268384332</td><td rowspan="1">42843</td></tr><tr class="passedeven"><td><a href="#m5">editBoatGroupVerifyData_TC_1008</a></td><td rowspan="1">1699268243315</td><td rowspan="1">14486</td></tr><tr class="passedeven"><td><a href="#m6">searchBoatGroup_TC_1004</a></td><td rowspan="1">1699268114614</td><td rowspan="1">1404</td></tr><tr class="passedeven"><td><a href="#m7">verifyBoatGroupPageOpens_TC_1001</a></td><td rowspan="1">1699268019654</td><td rowspan="1">56</td></tr><tr class="passedeven"><td><a href="#m8">verifyCopyFunctionBoatGroup_TC_1010</a></td><td rowspan="1">1699268349938</td><td rowspan="1">7133</td></tr><tr class="passedeven"><td><a href="#m9">viewPageNewBoatAdd_TC_1006</a></td><td rowspan="1">1699268171652</td><td rowspan="1">9327</td></tr><tr class="passedeven"><td><a href="#m10">viewSavedDataBoatGroup_TC_1005</a></td><td rowspan="1">1699268141683</td><td rowspan="1">3025</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.marina.tests.Mod_6_BoatGroup</td><td><a href="#m0">generatingMultipleAddRequest_TC_1009</a></td><td rowspan="1">1699272282281</td><td rowspan="1">25079</td></tr><tr><th colspan="4">test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="10">com.marina.tests.Mod_6_BoatGroup</td><td><a href="#m1">addBoatGroupAllFields_TC_1003</a></td><td rowspan="1">1699272076173</td><td rowspan="1">5173</td></tr><tr class="passedeven"><td><a href="#m2">addBoatGroupMandatoryFields_TC_1002</a></td><td rowspan="1">1699272040188</td><td rowspan="1">4531</td></tr><tr class="passedeven"><td><a href="#m3">addBoatMainPage_TC_1007</a></td><td rowspan="1">1699272207567</td><td rowspan="1">5894</td></tr><tr class="passedeven"><td><a href="#m4">deleteBoatGroups_TC_1011</a></td><td rowspan="1">1699272374478</td><td rowspan="1">37915</td></tr><tr class="passedeven"><td><a href="#m5">editBoatGroupVerifyData_TC_1008</a></td><td rowspan="1">1699272237977</td><td rowspan="1">17647</td></tr><tr class="passedeven"><td><a href="#m6">searchBoatGroup_TC_1004</a></td><td rowspan="1">1699272107214</td><td rowspan="1">1439</td></tr><tr class="passedeven"><td><a href="#m7">verifyBoatGroupPageOpens_TC_1001</a></td><td rowspan="1">1699272010165</td><td rowspan="1">257</td></tr><tr class="passedeven"><td><a href="#m8">verifyCopyFunctionBoatGroup_TC_1010</a></td><td rowspan="1">1699272338184</td><td rowspan="1">7542</td></tr><tr class="passedeven"><td><a href="#m9">viewPageNewBoatAdd_TC_1006</a></td><td rowspan="1">1699272174025</td><td rowspan="1">8870</td></tr><tr class="passedeven"><td><a href="#m10">viewSavedDataBoatGroup_TC_1005</a></td><td rowspan="1">1699272142031</td><td rowspan="1">3075</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.marina.tests.Mod_6_BoatGroup#generatingMultipleAddRequest_TC_1009</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [1] but found [3]
-	at org.testng.Assert.fail(Assert.java:97)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:136)
-	at org.testng.Assert.assertEquals(Assert.java:118)
-	at org.testng.Assert.assertEquals(Assert.java:839)
-	at org.testng.Assert.assertEquals(Assert.java:849)
+<h2>test</h2><h3 id="m0">com.marina.tests.Mod_6_BoatGroup#generatingMultipleAddRequest_TC_1009</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [1] but found [3]
 	at com.marina.tests.Mod_6_BoatGroup.generatingMultipleAddRequest_TC_1009(Mod_6_BoatGroup.java:158)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:134)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:597)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:816)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.util.ArrayList.forEach(ArrayList.java:1257)
-	at org.testng.TestRunner.privateRun(TestRunner.java:766)
-	at org.testng.TestRunner.run(TestRunner.java:587)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:384)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:378)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:337)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:286)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1187)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1109)
-	at org.testng.TestNG.runSuites(TestNG.java:1039)
-	at org.testng.TestNG.run(TestNG.java:1007)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
+	at java.lang.Thread.run(Thread.java:748)
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.marina.tests.Mod_6_BoatGroup#addBoatGroupAllFields_TC_1003</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">com.marina.tests.Mod_6_BoatGroup#addBoatGroupMandatoryFields_TC_1002</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">com.marina.tests.Mod_6_BoatGroup#addBoatMainPage_TC_1007</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
