--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,14 +4,64 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.marina.tests.Mod_1_login</td>
+<td>com.marina.tests.Mod_6_BoatGroup</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>lg_001_verifyLogin</td>
+<td>verifyBoatGroupPageOpens_TC_1001</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>editBoatGroupVerifyData_TC_1008</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBoatMainPage_TC_1007</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBoatGroupMandatoryFields_TC_1002</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>generatingMultipleAddRequest_TC_1009</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteBoatGroups_TC_1011</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyCopyFunctionBoatGroup_TC_1010</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>viewPageNewBoatAdd_TC_1006</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>viewSavedDataBoatGroup_TC_1005</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBoatGroupAllFields_TC_1003</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchBoatGroup_TC_1004</td>
 <td>regression,sanity,smoke </td>
 </tr>
 <tr>
@@ -22,50 +72,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeTest</td>
+<td>beforeMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>com.marina.tests.Mod_2_SpaceTypes</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ST1_002_verifyPopupAddSpac</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ST1_001_verifySpacePage</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterTest</td>
+<td>afterMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
