--- a/test-output/index.html
+++ b/test-output/index.html
@@ -188,12 +188,14 @@
                   </a> <!-- generatingMultipleAddRequest_TC_1009 -->
                   <span class="method-name">generatingMultipleAddRequest_TC_1009</span>
                   <div class="stack-trace">java.lang.AssertionError: expected [1] but found [3]
-	at com.marina.tests.Mod_6_BoatGroup.generatingMultipleAddRequest_TC_1009(Mod_6_BoatGroup.java:158)
+	at com.marina.tests.Mod_6_BoatGroup.generatingMultipleAddRequest_TC_1009(Mod_6_BoatGroup.java:166)
 	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
 	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
 	at java.lang.Thread.run(Thread.java:748)
 ... Removed 17 stack frames
 </div> <!-- stack-trace -->
+                  <em>
+(Check If Multiple Groups Generating While Clicking Add Button Multiple Times)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -209,6 +211,8 @@
                   <a name="addBoatGroupAllFields_TC_1003">
                   </a> <!-- addBoatGroupAllFields_TC_1003 -->
                   <span class="method-name">addBoatGroupAllFields_TC_1003</span>
+                  <em>
+(Add Boat Group With All Fields)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -216,6 +220,8 @@
                   <a name="addBoatGroupMandatoryFields_TC_1002">
                   </a> <!-- addBoatGroupMandatoryFields_TC_1002 -->
                   <span class="method-name">addBoatGroupMandatoryFields_TC_1002</span>
+                  <em>
+(Add Boat Group With Mandatory Fields)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -223,6 +229,8 @@
                   <a name="addBoatMainPage_TC_1007">
                   </a> <!-- addBoatMainPage_TC_1007 -->
                   <span class="method-name">addBoatMainPage_TC_1007</span>
+                  <em>
+(Add New Boat From Main Boat Group Page)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -230,6 +238,8 @@
                   <a name="deleteBoatGroups_TC_1011">
                   </a> <!-- deleteBoatGroups_TC_1011 -->
                   <span class="method-name">deleteBoatGroups_TC_1011</span>
+                  <em>
+(Check Delete Boat Group Functionality)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -237,6 +247,8 @@
                   <a name="editBoatGroupVerifyData_TC_1008">
                   </a> <!-- editBoatGroupVerifyData_TC_1008 -->
                   <span class="method-name">editBoatGroupVerifyData_TC_1008</span>
+                  <em>
+(Edit Specific Boat Group & Verify Its Data)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -244,6 +256,8 @@
                   <a name="searchBoatGroup_TC_1004">
                   </a> <!-- searchBoatGroup_TC_1004 -->
                   <span class="method-name">searchBoatGroup_TC_1004</span>
+                  <em>
+(Search Specific Boat Group)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -251,6 +265,8 @@
                   <a name="verifyBoatGroupPageOpens_TC_1001">
                   </a> <!-- verifyBoatGroupPageOpens_TC_1001 -->
                   <span class="method-name">verifyBoatGroupPageOpens_TC_1001</span>
+                  <em>
+(Check Boat Group Page Gets Open)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -258,6 +274,8 @@
                   <a name="verifyCopyFunctionBoatGroup_TC_1010">
                   </a> <!-- verifyCopyFunctionBoatGroup_TC_1010 -->
                   <span class="method-name">verifyCopyFunctionBoatGroup_TC_1010</span>
+                  <em>
+(Check & Verify The Copy Functionality Of Boat Group)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -265,6 +283,8 @@
                   <a name="viewPageNewBoatAdd_TC_1006">
                   </a> <!-- viewPageNewBoatAdd_TC_1006 -->
                   <span class="method-name">viewPageNewBoatAdd_TC_1006</span>
+                  <em>
+(Add New Boat From View Page Of Boat Group)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -272,6 +292,8 @@
                   <a name="viewSavedDataBoatGroup_TC_1005">
                   </a> <!-- viewSavedDataBoatGroup_TC_1005 -->
                   <span class="method-name">viewSavedDataBoatGroup_TC_1005</span>
+                  <em>
+(Verify All The Saved Information Of Boat Group On View Page)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -384,47 +406,47 @@ data.addRows(11);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'deleteBoatGroups_TC_1011')
 data.setCell(0, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(0, 3, 37915);
+data.setCell(0, 3, 38488);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'generatingMultipleAddRequest_TC_1009')
 data.setCell(1, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(1, 3, 25079);
+data.setCell(1, 3, 24016);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'editBoatGroupVerifyData_TC_1008')
 data.setCell(2, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(2, 3, 17647);
+data.setCell(2, 3, 13730);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'viewPageNewBoatAdd_TC_1006')
 data.setCell(3, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(3, 3, 8870);
+data.setCell(3, 3, 13700);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'verifyCopyFunctionBoatGroup_TC_1010')
 data.setCell(4, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(4, 3, 7542);
+data.setCell(4, 3, 9476);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'addBoatMainPage_TC_1007')
 data.setCell(5, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(5, 3, 5894);
+data.setCell(5, 3, 6092);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'addBoatGroupAllFields_TC_1003')
 data.setCell(6, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(6, 3, 5173);
+data.setCell(6, 3, 5065);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'addBoatGroupMandatoryFields_TC_1002')
 data.setCell(7, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(7, 3, 4531);
+data.setCell(7, 3, 4666);
 data.setCell(8, 0, 8)
 data.setCell(8, 1, 'viewSavedDataBoatGroup_TC_1005')
 data.setCell(8, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(8, 3, 3075);
+data.setCell(8, 3, 3193);
 data.setCell(9, 0, 9)
 data.setCell(9, 1, 'searchBoatGroup_TC_1004')
 data.setCell(9, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(9, 3, 1439);
+data.setCell(9, 3, 1153);
 data.setCell(10, 0, 10)
 data.setCell(10, 1, 'verifyBoatGroupPageOpens_TC_1001')
 data.setCell(10, 2, 'com.marina.tests.Mod_6_BoatGroup')
-data.setCell(10, 3, 257);
+data.setCell(10, 3, 63);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -462,141 +484,141 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">231 ms</span>
+                <span class="method-start">240 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyBoatGroupPageOpens_TC_1001</span>
-                <span class="method-start">26701 ms</span>
+                <span class="method-start">26065 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">26973 ms</span>
+                <span class="method-start">26139 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">31237 ms</span>
+                <span class="method-start">28689 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">addBoatGroupMandatoryFields_TC_1002</span>
-                <span class="method-start">56724 ms</span>
+                <span class="method-start">52393 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">61256 ms</span>
+                <span class="method-start">57059 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">64056 ms</span>
+                <span class="method-start">61204 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">addBoatGroupAllFields_TC_1003</span>
-                <span class="method-start">92709 ms</span>
+                <span class="method-start">87442 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">97884 ms</span>
+                <span class="method-start">92507 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">100268 ms</span>
+                <span class="method-start">95436 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">searchBoatGroup_TC_1004</span>
-                <span class="method-start">123750 ms</span>
+                <span class="method-start">121246 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">125191 ms</span>
+                <span class="method-start">122400 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">127508 ms</span>
+                <span class="method-start">126570 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">viewSavedDataBoatGroup_TC_1005</span>
-                <span class="method-start">158567 ms</span>
+                <span class="method-start">149555 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">161644 ms</span>
+                <span class="method-start">152749 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">164014 ms</span>
+                <span class="method-start">155486 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">viewPageNewBoatAdd_TC_1006</span>
-                <span class="method-start">190561 ms</span>
+                <span class="method-start">179283 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">199432 ms</span>
+                <span class="method-start">192987 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">201963 ms</span>
+                <span class="method-start">195400 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">addBoatMainPage_TC_1007</span>
-                <span class="method-start">224103 ms</span>
+                <span class="method-start">228874 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">229999 ms</span>
+                <span class="method-start">234968 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">232838 ms</span>
+                <span class="method-start">237192 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">editBoatGroupVerifyData_TC_1008</span>
-                <span class="method-start">254513 ms</span>
+                <span class="method-start">260880 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">272161 ms</span>
+                <span class="method-start">274612 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">275537 ms</span>
+                <span class="method-start">277471 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">generatingMultipleAddRequest_TC_1009</span>
-                <span class="method-start">298817 ms</span>
+                <span class="method-start">303213 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">324030 ms</span>
+                <span class="method-start">327378 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">329807 ms</span>
+                <span class="method-start">330037 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyCopyFunctionBoatGroup_TC_1010</span>
-                <span class="method-start">354720 ms</span>
+                <span class="method-start">354140 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">362263 ms</span>
+                <span class="method-start">363617 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">364798 ms</span>
+                <span class="method-start">367354 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">deleteBoatGroups_TC_1011</span>
-                <span class="method-start">391014 ms</span>
+                <span class="method-start">390979 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">428931 ms</span>
+                <span class="method-start">429468 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">431974 ms</span>
+                <span class="method-start">432538 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
